--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,7 +4,7 @@
 <meta property="og:image" content="https://translucent504.github.io/assets/images/bio-photo.png">
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/stationery.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/stationery.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
