--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,4 @@
 <!-- start custom footer snippets -->
-
+<p align="center"><font size="4", color="gray">Happiness lies in the joy of achievement and the thrill of creative effort.</font><br>
+    <font size="2">Franklin D. Roosevelt</font></p>
 <!-- end custom footer snippets -->
